Replace set/get startnumber by set/get startid